--- a/scripts/runner.conf
+++ b/scripts/runner.conf
@@ -11,102 +11,102 @@ qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroB200 -q plgrid
 qsub -l nodes=1:ppn=12 zeus_runner.sh -F ts225 -q plgrid
 qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr264 -q plgrid
 qsub -l nodes=1:ppn=12 zeus_runner.sh -F 250_cities1000 -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F a280.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ali535.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F att48.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F att532.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F bayg29.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F bays29.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F bier127.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F brazil58.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F brd14051.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F brg180.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F burma14.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ch130.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ch150.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d1291.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d15112.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d1655.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d18512.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d198.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d2103.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d493.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F d657.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F dantzig42.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F dsj1000.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F eil101.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl1400.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl1577.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl3795.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl417.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fnl4461.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F fri26.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gil262.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr120.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr137.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr17.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr202.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr21.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr229.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr24.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr431.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr48.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr666.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr96.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F hk48.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroA150.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroA200.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroB100.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroB150.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroC100.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroD100.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F lin318.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F linhp318.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F nrw1379.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F p654.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pa561.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb1173.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb3038.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb442.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla33810.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla7397.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla85900.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr1002.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr107.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr124.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr136.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr144.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr152.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr226.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr2392.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr299.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr439.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat575.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat783.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat99.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rd100.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rd400.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl11849.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1304.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1323.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1889.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl5915.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl5934.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F si1032.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F si175.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F si535.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F swiss42.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ts225.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1060.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1432.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u159.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1817.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u2152.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u2319.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u574.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F u724.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ulysses16.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F ulysses22.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F usa13509.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F vm1084.cities -q plgrid
-qsub -l nodes=1:ppn=12 zeus_runner.sh -F vm1748.cities -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F a280 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ali535 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F att48 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F att532 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F bayg29 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F bays29 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F bier127 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F brazil58 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F brd14051 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F brg180 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F burma14 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ch130 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ch150 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d1291 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d15112 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d1655 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d18512 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d198 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d2103 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d493 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F d657 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F dantzig42 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F dsj1000 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F eil101 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl1400 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl1577 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl3795 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fl417 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fnl4461 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F fri26 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gil262 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr120 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr137 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr17 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr202 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr21 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr229 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr24 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr431 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr48 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr666 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F gr96 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F hk48 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroA150 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroA200 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroB100 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroB150 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroC100 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F kroD100 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F lin318 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F linhp318 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F nrw1379 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F p654 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pa561 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb1173 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb3038 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pcb442 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla33810 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla7397 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pla85900 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr1002 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr107 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr124 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr136 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr144 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr152 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr226 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr2392 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr299 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F pr439 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat575 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat783 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rat99 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rd100 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rd400 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl11849 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1304 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1323 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl1889 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl5915 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F rl5934 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F si1032 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F si175 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F si535 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F swiss42 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ts225 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1060 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1432 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u159 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u1817 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u2152 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u2319 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u574 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F u724 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ulysses16 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F ulysses22 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F usa13509 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F vm1084 -q plgrid
+qsub -l nodes=1:ppn=12 zeus_runner.sh -F vm1748 -q plgrid
